@@ -448,8 +448,8 @@ Andrew Kuchling
 Vladimir Kushnir
 Cameron Laird
 Torsten Landschoff
-Tino Lange
 Łukasz Langa
+Tino Lange
 Andrew Langmead
 Detlef Lannert
 Soren Larsen
